# Agentfuse

./: .env.example  ARCHITECTURE.md  BUILD_SUMMARY.md  DASHBOARD_ARCHITECTURE.md  DASHBOARD_COMPLETE.md  DASHBOARD_SETUP.md  DASHBOARD_VISUAL_GUIDE.txt  FILES_CREATED.md  INDEX.md  LAYERS_3_4_5_GUIDE.md  LAYER_6_KILL_SWITCH.md  QUICKSTART.md  QUICK_DEMO_START.sh  README.md  docker-compose.yml  pyproject.toml
config/: policies.yaml
dashboard/: .env.local  README.md  package.json  tailwind.config.js  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: BlastRadiusMap.tsx  Header.tsx  LiveActionFeed.tsx  Navigation.tsx  RollbackUI.tsx  Stats.tsx
scripts/: demo.py  demo_layer6_kill_switch.py  demo_layers_3_4_5.py  generate_training_data.py  integration_example.py  train_classifier.py
src/: classifier.py  config.py  database.py  main.py  mcp_proxy.py  policy_engine.py  schemas.py  slack_bot.py
src/api/: actions.py  health.py  kill_switch.py  snapshots.py  websocket.py
src/layers/: __init__.py  layer3_scope_rules.py  layer4_snapshots.py  layer5_rollback.py  layer6_kill_switch.py
tests/: test_classifier.py  test_mcp_proxy.py  test_policy_engine.py
