[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfuse"
version = "0.1.0"
description = "Safety layer for AI agents - intercept, classify, and control destructive actions before execution"
requires-python = ">=3.10"
authors = [{name = "AgentFuse Team"}]

dependencies = [
    # MCP & Agent Communication
    "mcp>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # ML & Classification
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",

    # Database & ORM
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",

    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.2",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
